# RustFileSeekerGUI

./: .gitignore  Cargo.toml  README.md  recent_log.py
src/: finder.rs  finder2.rs  logger.rs  main.rs  setup.rs  stated.rs
