[package]
name = "new-finder-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.4.1", package = "libadwaita", features = ["v1_3"] }
chrono = "0.4.24"
directories = "5.0.1"
gtk = { version = "0.6.6", package = "gtk4" }
log = "0.4.17"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_yaml = "0.9.21"
simplelog = "0.12.1"
walkdir = "2.3.3"
